--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,13 +6,40 @@
   <display-name>Archetype Created Web Application</display-name>
 
   <servlet>
-    <servlet-name>login</servlet-name>
-    <servlet-class>com.example.login</servlet-class>    
+    <servlet-name>slogin</servlet-name>
+    <servlet-class>com.example.slogin</servlet-class>    
   </servlet>
+  <servlet>
+    <servlet-name>sregister</servlet-name>
+    <servlet-class>com.example.sregister</servlet-class>    
+  </servlet>
+  <servlet>
+    <servlet-name>tlogin</servlet-name>
+    <servlet-class>com.example.tlogin</servlet-class>    
+  </servlet>
+  <servlet>
+    <servlet-name>tregister</servlet-name>
+    <servlet-class>com.example.tregister</servlet-class>    
+  </servlet>
+  
 
   <servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/login</url-pattern>
+    <servlet-name>slogin</servlet-name>
+    <url-pattern>/slogin</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>sregister</servlet-name>
+    <url-pattern>/sregister</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>tlogin</servlet-name>
+    <url-pattern>/tlogin</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>tregister</servlet-name>
+    <url-pattern>/tregister</url-pattern>
+  </servlet-mapping>
+
 
 </web-app>
