--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
   </properties>
 
   <dependencies>
+
+
+
+    <dependency>
+      <groupId>com.thetransactioncompany</groupId>
+      <artifactId>cors-filter</artifactId>
+      <version>2.10</version>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
